# referral_agent

./: .gitignore  README.md  app.py  initialize_agent.py  parse_and_summarize_pdf.py  pyproject.toml  requirements.txt  run.py
src/referral_agent/: __init__.py  clean_json.py  connector.py  create_neo4j_tool.py  guideline_recommendations.py  initialize_agent.py  main.py  mapper.py  parse_and_summarize_pdf.py
src/smol/: index.py
src/test/: parser.py
src/utils/: agent.py  create_neo4j_tool.py  ingestpdfpinecone.py  initialize_neo4j_agent.py  list_ollama.py  llama_test.py  ollama_llama.py
utils/: check_scanned.py
