[project]
name = "referral-agent"
version = "0.1.0"
description = "Add your description here"
packages = [
    { include = "referral_agent", from = "src" }
]
dependencies = [
    "streamlit>=1.41.1",
    "openai>=1.58.1",
    "langchain>=0.3.13",
    "langchain-openai>=0.2.14",
    "pydantic>=2.10.4",
    "llama-index>=0.12.8",
    "pinecone-client>=5.0.1",
    "pandas>=2.2.3",
    "langchain-community>=0.3.13",
    "llama-index-vector-stores-pinecone>=0.4.2",
    "langsmith>=0.2.4",
    "pymupdf>=1.25.1",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.13",
    "langchain-ollama>=0.2.2",
]
readme = "README.md"
requires-python = ">= 3.12"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/referral_agent"]
